# gemini-juggler

./: Cargo.toml  Dockerfile  README.md  compose.yml  config.default.toml  flake.nix  rust-toolchain.toml
src/: main.rs
src/config/: mod.rs
src/routes/: completions.rs  gemini.rs  mod.rs  openai.rs  openai_completions.rs  status.rs
src/utils/: cli.rs  config.rs  http_logger.rs  juggler.rs  log.rs  mod.rs  requester.rs
