[package]
name = "gemini-juggler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
awc = { version = "3.6.0", features = ["rustls"] }
chrono = "0.4.40"
chrono-tz = "0.10.3"
colog = "1.3.0"
colored = "3.0.0"
easy-config-store = "0.1.0"
env_logger = "0.11.7"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
