[package]
name = "gemini-juggler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.10.2"
anyhow = "1.0.97"
awc = { version = "3.6.0", features = ["rustls"] }
chrono = "0.4.40"
chrono-tz = "0.10.3"
clap = { version = "4.5.53", features = ["derive"] }
colog = "1.3.0"
colored = "3.0.0"
dur = "0.5.3"
easy-config-store = "0.2.2"
env_logger = "0.11.7"
eyre = "0.6.12"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
