[package]
name = "gemini-juggler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
anyhow = "1.0.100"
awc = { version = "3.8.1", features = ["rustls"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colog = "1.4.0"
colored = "3.0.0"
dur = "0.5.3"
easy-config-store = "0.2.2"
env_logger = "0.11.8"
eyre = "0.6.12"
futures-util = "0.3.31"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
